[package]
name = "rpkg"
version = "0.1.0"
edition = "2021"
description = "A simple package manager for Rust"
authors = ["Rustaceans"]
repository = "https://github.com/drazisil/rpkg"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
sentry = "0.34.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-macros = "2.4.0"
