[package]
name = "rpkg"
version = "0.1.0"
edition = "2021"
description = "A simple package manager for Rust"
authors = ["Rustaceans"]
repository = "https://github.com/drazisil/rpkg"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
env_home = "0.1.0"
sentry = { version = "0.41.0", features = ["tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
